--- a/Konutcheck - FrontEnd/frontend/konutcheck/house profile/shop-product-sidebar-left.html
+++ b/Konutcheck - FrontEnd/frontend/konutcheck/house profile/shop-product-sidebar-left.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Single Product Left Sidebar | Porto - Responsive HTML5 Template</title>	
+		<title>Ev Detayları</title>	
 
 		<meta name="keywords" content="HTML5 Template" />
 		<meta name="description" content="Porto - Responsive HTML5 Template">
